# polish-sign-lang

./: .gitignore  README.md
backend/: copy_pjm_dataset.sh  pyproject.toml
backend/app/: connection.py  evaluator.py  main.py
backend/translator/: cli.py  landmarks.py  preprocess.py  tf.py  train.py  verify.py
backend/translator/commands/: __init__.py  dataset.py  model.py  webcam.py
backend/translator/data/test/: features_A.npy  features_B.npy  features_C.npy  features_D.npy  features_E.npy  features_F.npy  features_G.npy  features_H.npy  features_I.npy  features_L.npy  features_M.npy  features_N.npy  features_O.npy  features_P.npy  features_R.npy  features_S.npy  features_T.npy  features_U.npy  features_W.npy  features_Y.npy  features_Z.npy  labels_C.npy  labels_E.npy  labels_H.npy  labels_I.npy  labels_L.npy  labels_M.npy  labels_O.npy  labels_U.npy  labels_Y.npy  labels_Z.npy
backend/translator/data/train/: features_A.npy  features_B.npy  features_C.npy  features_D.npy  features_E.npy  features_F.npy  features_G.npy  features_H.npy  features_I.npy  features_L.npy  features_M.npy  features_N.npy  features_O.npy  features_P.npy  features_R.npy  features_S.npy  features_T.npy  features_U.npy  features_W.npy  features_Y.npy  features_Z.npy  labels_A.npy  labels_B.npy  labels_C.npy  labels_D.npy  labels_E.npy  labels_F.npy  labels_G.npy  labels_H.npy  labels_I.npy  labels_L.npy  labels_M.npy  labels_N.npy  labels_O.npy  labels_P.npy  labels_R.npy  labels_S.npy  labels_T.npy  labels_U.npy  labels_W.npy  (+2 more)
backend/translator/models/: pjm_model.keras
(+38 files in other folders)
